assets/css/style.scss
/* ... */
.team-skills .progress-block .progress {
  box-shadow: none;
  border-radius: 0;
  height: 10px;
}

.team-skills .progress-block .progress .progress-bar {
  background: $color-2;
  box-shadow: none;
}

.clients-logo-slider {
  margin-top: 50px;
}

/*=================================================================
  Our Team
  ==================================================================*/
.team-member {
  background: $white-100;
  margin-bottom: 15px;
}

.team-member:hover img {
  -webkit-transform: scale(1.1);
          transform: scale(1.1);
}

.team-member:hover .mask {
  opacity: 1;
}

.team-member .member-content {
  padding: 25px 0;
}

.team-member .member-content h3 {
  font-size: 20px;
  margin: 0 0 5px;
  color: $grey-dark;
}

.team-member .member-content span {
  color: $grey-dark;
}

.team-member .member-content p {
  color: $grey-dark;
  margin-top: 10px;
  padding: 0 15px;
}

.team-member .member-content ul {
  text-align: center;
  position: relative;
}

.team-member .member-content ul li {
  margin-right: 7px;
}

.team-member .member-content ul li a {
  font-size: 18px;
  padding: 10px;
}

.team-member .member-content ul li a i {
  color: $color-2;
  background: linear-gradient(100deg, $color-2, $color-2);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.team-member .member-content ul li a::hover {
  background-color: $color-2;
  border: 1px solid transparent;
}

.team-member .member-photo {
  overflow: hidden;
  position: relative;
}

.team-member .member-photo img {
  transition: all 0.6s ease 0s;
}

/*=================================================================
  Latest Posts
==================================================================*/
.post-item {
  background: $white-100;
  margin-bottom: 40px;
}

.post-item .post-meta a {
  color: $color-2;
}

.post-item .post-meta a:hover {
  color: $color-1;
}

.post-item .post-thumb {
  margin-right: 10px;
}

.post-item .post-thumb img {
  height: auto;
}

.post-item .post-title {
  margin-top: 20px;
}

.post-item .post-title h3 {
  font-size: 23px;
}

.post-item .post-title h3 a {
  color: $black-100;
}

.post-item .post-meta {
}

.post-item .post-meta a {
  margin: 3px 0;
}

.post-item .post-content p {
  color: $grey-dark;
  margin: 10px 0;
}

.post-item .btn-main, .post-item .btn-main-sm {
  font-size: 12px;
  margin-top: 10px;
  padding: 8px 20px;
  margin: 15px 0;
}

/*=================================================================
  Single Blog Page
==================================================================*/
#blog-banner {
  padding-bottom: 100px;
  padding-top: 150px;
}

#blog-page {
  margin: 0 0 40px;
}

.post-excerpt {
  padding: 0 20px;
  margin-bottom: 60px;
}

.post-excerpt h3 a {
  color: $black-100;
}

.post-excerpt blockquote {
  line-height: 22px;
  margin: 20px 0;
  font-size: 16px;
}

.single-blog {
  background-color: $white-100;
  margin-bottom: 50px;
  padding: 20px;
}

.blog-subtitle {
  font-size: 15px;
  padding-bottom: 10px;
  border-bottom: 1px solid $grey-light;
  margin-bottom: 25px;
  text-transform: uppercase;
}

.next-prev {
  border-bottom: 1px solid $grey-light;
  border-top: 1px solid $grey-light;
  margin: 20px 0;
  padding: 25px 0;
}

.next-prev a {
  color: $black-100;
}

.next-prev a:hover {
  color: $color-1;
}

.next-prev .prev-post i {
  margin-right: 10px;
}

.next-prev .next-post i {
  margin-left: 10px;
}

.social-profile ul li {
  margin: 0 10px 0 0;
  display: inline-block;
}

.social-profile ul li a {
  color: $grey-dark;
  display: block;
  font-size: 16px;
}

.social-profile ul li a i:hover {
  color: $color-1;
}

.comments-section {
  margin-top: 35px;
}

.author-about {
  margin: 20px 0 0 10px;
}

.post-author {
  display: flex;
}

.post-author > img {
  border: 1px solid $grey-light;
  max-height: 100px;
  padding: 5px;
}

.comment-list ul {
  margin-top: 20px;
}

.comment-list ul li {
  margin-bottom: 20px;
}

.comment-wrap {
  border: 1px solid $grey-light;
  border-radius: 1px;
  margin-left: 20px;
  padding: 10px;
  position: relative;
}

.comment-wrap .author-avatar {
  margin-right: 10px;
}

.comment-wrap .media .media-heading {
  margin-bottom: 8px;
}

.comment-wrap .media .media-heading a {
  color: $color-2;
  font-size: 13px;
}

.comment-wrap .media .comment-meta {
  font-size: 12px;
  color: $grey-light;
}

.comment-wrap .media p {
  margin-top: 15px;
}

.comment-reply-form {
  margin-top: 80px;
}

.comment-reply-form input, .comment-reply-form textarea {
  height: 35px;
  border-radius: 0;
  box-shadow: none;
}

.comment-reply-form input:focus, .comment-reply-form textarea:focus {
  box-shadow: none;
  border: 1px solid $color-2;
}

.comment-reply-form textarea, .comment-reply-form .btn-main, .comment-reply-form .btn-main-sm {
  height: auto;
}

.pagination{
  justify-content: center;
}
.pagination li{
  margin: 0 5px;
  font-size: 20px;
}
.pagination li a{
  color: $grey-dark;
}
.pagination li.disabled a{
  color: $grey-light;
}
.pagination li.active a{
  background-color: $color-2 !important;
  border-color: $color-2 !important;
  font-weight: 600;
}

/*=================================================================
  Footer section
==================================================================*/
.top-footer {
  background-color: $grey-dark;
  border-top: 1px solid $grey-dark;
  padding: 50px 0 10px;
}

.top-footer h3 {
  font-size: 16px;
  line-height: 1.5;
  color: $white-100;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin-bottom: 20px;
}

.top-footer p {
  font-size: 13px;
  line-height: 30px;
  color: $grey-light;
  font-weight: 300;
  padding-right: 20px;
}

.top-footer li a {
  font-size: 13px;
  line-height: 30px;
  color: $grey-light;
  font-weight: 300;
  letter-spacing: 1px;
  text-transform: capitalize;
  transition: color .3s;
  font-family: "IBM Plex Sans", sans-serif;
  display: block;
}
/* ... */

